style.css
/* ... */
.primary-nav a {
		text-decoration: none;
		display: block;
		padding: 5px 20px;
		font-size: 2.5rem;
		color: #FFF;



	}



@media (min-width: 530px) {

.primary-nav a {
			margin-left: 10px



	}
	}

.primary-nav-is-visible {
	visibility: visible;
	display: initial;
	-webkit-transform: scale(1);
	        transform: scale(1);
	opacity: 1;
	}





.large-hero {

	position: relative;
}

.large-hero img {
		border-bottom: 5px solid #DC143C;
		width: 100%;
	}

.large-hero__text-content {
		position: absolute;
		top: 40%;
		left: 0;
		width: 100%;
		text-align: center;
		color: #F2F2F2;
	}

.main-section {
	position: relative;
	margin-top: 15px;
}



@media (min-width: 880px) {

.main-section {
		margin-top: 40px
}
	}

.post-info {
  color: #999;
  font-size: 1.2rem;
  font-family: Verdana;

}

.post-info a:link,
.post-info a:visited {
  color: #999;
}


.post {
    margin-bottom: 0px;
}

.main-content {
	margin-top: 10px;
	background-color: #E9E8E7;
	padding: 10px;
	border-radius: 5px;

}

.main-content img {
    padding: .25rem;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: .25rem;
    max-width: 100%;
    text-align: center;
    vertical-align: middle;
    padding-left: .3rem;
}

h5 {
  text-align: center;
}

.aside__urgent-news {
        background-color: #E9E8E7;
        border-radius: 5px;
        border: 1px solid #E9E8E7;
        margin-top: 10px;
        margin-bottom: 15px;
    }

.aside__urgent-news h5 {
            font-weight: 600;
            background-color: #DC143C;
            color: #F2F2F2;
            padding: 10px 10px 10px 10px;
            font-size: 2.1rem !important;

      }

@media (min-width: 530px) {

.aside__urgent-news h5 {
                padding-left: 5px;
                padding-right: 5px;
                font-size: 5rem

      }
	}

.aside__urgent-news h6 {
            padding: 0 8px 10px 8px;
            font-weight: 600;
        }

.aside__column-nav {
        background-color: #E9E8E7;
        border-radius: 5px;
        margin-bottom: 15px;
        text-align: center;



    }

.aside__box {
        margin-top: 10px;
        padding-right: 30px;
        display: inline-block;
        padding-top: 20px;
        padding-bottom: 20px;
    }

@media (min-width: 880px) {

.aside__box {
            display: -webkit-box;
            display: -ms-flexbox;
            display: flex;

            padding: 20px 0 20px 15px
    }
	}

.aside__icon {
        width: 35px;
        height: auto;
        margin-left: auto;
        margin-right: auto;
        padding-right: 50px;

    }

@media (min-width: 880px) {

.aside__icon {
        margin-left: 0px;
        margin-right: 0px

    }
	}

.aside__box-content {
        margin-top: 12px;
       
    }

@media (min-width: 880px) {

.aside__box-content {
            padding-left: 30px
       
    }
	}

.aside__schedule .aside__icon {
            padding-left: 4px;
        }

.aside__advert {
        background-color: #E9E8E7;
        border-radius: 5px;
        border: 1px solid #E9E8E7;
        margin-top: 10px;
        margin-bottom: 15px;
    }

.footer {
    background-color: #ED1C24;
    color: #F2F2F2;
    margin-top: 30px;
}

.footer__partners {
        margin-top: 20px;
        float: left;
        width: 100%;
        text-align: center;


    }

@media (min-width: 880px) {

.footer__partners {
            width: auto


    }
	}

.footer__partners img {
        background-color: #FFF;
        width: 125px;
        height: auto;
        vertical-align: middle;
        border: 2px solid #F2F2F2;
        margin-right: 25px;
        margin-left: 10px;
        margin-bottom: 20px;

    }

@media (min-width: 880px) {

.footer__partners img {
            margin-bottom: 0

    }
	}

.footer__partners a:last-child {
        margin-right: 0px;
    }

.footer__list {
       


    }

.footer ul {
       text-align: center;
       padding-top: 220px;
    }

@media (min-width: 880px) {

.footer ul {
            text-align: left;
             padding-top: 99px
    }
	}

.footer li {
        list-style: none;
        display: inline;
        padding: 5px 10px 5px 10px;
        border-right: 1px solid #FFF;
    }

.footer li:last-child {
        border-right: none;
    }

.footer a {
        color: #F2F2F2;
        text-decoration: none;
    }

.footer a:hover {
         text-decoration: underline;
    }

.footer .footer__copyright p {
        text-align: center;
        font-weight: 300;
        font-size: 1.2rem;
        margin-bottom: 0.5rem;
        padding-top: 1rem;
    }

@media (min-width: 880px) {

.footer .footer__copyright p {
             padding-top: 0rem
    }
	}

